--- a/less/variables.less
+++ b/less/variables.less
@@ -9,7 +9,7 @@
 
 @gray-base:              #000;
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
-@gray-dark:              lighten(@gray-base, 20%);   // #333
+@gray-dark:              #252525;
 @gray:                   lighten(@gray-base, 33.5%); // #555
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
@@ -26,7 +26,7 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #fff;
+@body-bg:               #f8f8f8;
 //** Global text color on `<body>`.
 @text-color:            @gray-dark;
 
@@ -41,7 +41,20 @@
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
+@font-face {
+  font-family: 'noto sans regular';
+  src: url('@{icon-font-path}@{font-name-base}.eot');
+  src: url('@{icon-font-path}@{font-name-base}.eot?#iefix') format('embedded-opentype'),
+       url('@{icon-font-path}@{font-name-base}.woff2') format('woff2'),
+       url('@{icon-font-path}@{font-name-base}.woff') format('woff'),
+       url('@{icon-font-path}@{font-name-base}.ttf') format('truetype'),
+       url('@{icon-font-path}@{font-name-base}.svg#@{font-name-svg-id}') format('svg');
 
+}
+//** File name for all font files.
+@font-name-base:          "notosans-regular-webfont";
+//** Element ID within SVG icon file.
+@font-name-svg-id:        "noto_sans_regular";
 @font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
@@ -77,6 +90,7 @@
 
 //** Load fonts from this directory.
 @icon-font-path:          "../fonts/";
+
 //** File name for all font files.
 @icon-font-name:          "glyphicons-halflings-regular";
 //** Element ID within SVG icon file.
@@ -144,7 +158,7 @@
 
 @btn-font-weight:                normal;
 
-@btn-default-color:              #333;
+@btn-default-color:              #252525;
 @btn-default-bg:                 #fff;
 @btn-default-border:             #ccc;
 
@@ -324,7 +338,7 @@
 //** Number of columns in the grid.
 @grid-columns:              12;
 //** Padding between columns. Gets divided in half for the left and right.
-@grid-gutter-width:         30px;
+@grid-gutter-width:         26px;
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
 @grid-float-breakpoint:     @screen-sm-min;
@@ -347,7 +361,7 @@
 @container-md:                 @container-desktop;
 
 // Large screen / wide desktop
-@container-large-desktop:      (1140px + @grid-gutter-width);
+@container-large-desktop:      (1070px + @grid-gutter-width);
 //** For `@screen-lg-min` and up.
 @container-lg:                 @container-large-desktop;
 
