--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -30,6 +30,10 @@
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
+    <label for="input-@white-color">@white-color</label>
+    <input class="form-control" id="input-@white-color" type="text" value="#fff" data-var="@white-color"/>
+  </div>
+  <div class="col-xs-4">
     <label for="input-@brand-primary">@brand-primary</label>
     <input class="form-control" id="input-@brand-primary" type="text" value="darken(#428bca, 6.5%)" data-var="@brand-primary"/>
   </div>
@@ -37,11 +41,11 @@
     <label for="input-@brand-success">@brand-success</label>
     <input class="form-control" id="input-@brand-success" type="text" value="#5cb85c" data-var="@brand-success"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@brand-info">@brand-info</label>
     <input class="form-control" id="input-@brand-info" type="text" value="#5bc0de" data-var="@brand-info"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@brand-warning">@brand-warning</label>
     <input class="form-control" id="input-@brand-warning" type="text" value="#f0ad4e" data-var="@brand-warning"/>
@@ -96,7 +100,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@font-family-sans-serif">@font-family-sans-serif</label>
-    <input class="form-control" id="input-@font-family-sans-serif" type="text" value="&quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif" data-var="@font-family-sans-serif"/>
+    <input class="form-control" id="input-@font-family-sans-serif" type="text" value="&quot;noto sans regular&quot;, Helvetica, Arial, sans-serif" data-var="@font-family-sans-serif"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
@@ -205,24 +209,24 @@
 <div class="row">
   <div class="col-xs-4">
     <label for="input-@padding-base-vertical">@padding-base-vertical</label>
-    <input class="form-control" id="input-@padding-base-vertical" type="text" value="6px" data-var="@padding-base-vertical"/>
+    <input class="form-control" id="input-@padding-base-vertical" type="text" value="15px" data-var="@padding-base-vertical"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@padding-base-horizontal">@padding-base-horizontal</label>
-    <input class="form-control" id="input-@padding-base-horizontal" type="text" value="12px" data-var="@padding-base-horizontal"/>
+    <input class="form-control" id="input-@padding-base-horizontal" type="text" value="15px" data-var="@padding-base-horizontal"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@padding-large-vertical">@padding-large-vertical</label>
-    <input class="form-control" id="input-@padding-large-vertical" type="text" value="10px" data-var="@padding-large-vertical"/>
+    <input class="form-control" id="input-@padding-large-vertical" type="text" value="20px" data-var="@padding-large-vertical"/>
   </div>
   <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@padding-large-horizontal">@padding-large-horizontal</label>
-    <input class="form-control" id="input-@padding-large-horizontal" type="text" value="16px" data-var="@padding-large-horizontal"/>
+    <input class="form-control" id="input-@padding-large-horizontal" type="text" value="20px" data-var="@padding-large-horizontal"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@padding-small-vertical">@padding-small-vertical</label>
-    <input class="form-control" id="input-@padding-small-vertical" type="text" value="5px" data-var="@padding-small-vertical"/>
+    <input class="form-control" id="input-@padding-small-vertical" type="text" value="10px" data-var="@padding-small-vertical"/>
   </div>
   <div class="col-xs-4">
     <label for="input-@padding-small-horizontal">@padding-small-horizontal</label>
