--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,19 +1,98 @@
 <!-- Footer
 ================================================== -->
-<footer class="bs-docs-footer">
-  <div class="container">
-
-    <ul class="bs-docs-footer-links">
-      <li><a href="{{ site.repo }}">GitHub</a></li>
-      <li><a href="https://twitter.com/getbootstrap">Twitter</a></li>
-      <li><a href="../getting-started/#examples">Examples</a></li>
-      <li><a href="../about/">About</a></li>
-    </ul>
-
-    <p>Designed and built with all the love in the world by <a href="https://twitter.com/mdo" target="_blank">@mdo</a> and <a href="https://twitter.com/fat" target="_blank">@fat</a>. Maintained by the <a href="https://github.com/orgs/twbs/people">core team</a> with the help of <a href="https://github.com/twbs/bootstrap/graphs/contributors">our contributors</a>.</p>
-
-    <p>Code licensed <a rel="license" href="https://github.com/twbs/bootstrap/blob/master/LICENSE" target="_blank">MIT</a>, docs <a rel="license" href="https://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.</p>
-
+<footer>
+  <div class="container-fluid globalfooter">
+      <div class="footercontent clearfix">
+              <div class="footercolumn">
+                  <h3 data-heading="toggle" class="footer-heading visible-desktop">Københavns Universitet</h3>
+                  <h3 data-heading="toggle" class="footer-heading visible-mobile">Organisation</h3>
+                  <ul class="footerlinks">
+                      <li><a href="http://velkommen.ku.dk/organisation/ledelse">Ledelse</a></li>
+                      <li><a href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
+                      <li><a href="http://velkommen.ku.dk/organisation/fakulteter">Fakulteter</a></li>
+                      <li><a href="http://velkommen.ku.dk/organisation/institutter">Institutter</a></li>
+                      <li><a href="http://forskning.ku.dk/centre">Forskningscentre</a></li>
+                      <li><a href="http://vetschool.ku.dk/om/VetOmDyrehospitaler">Dyrehospitaler</a></li>
+                      <li><a href="http://odont.ku.dk/for_patienter">Tandlægeskolen</a></li>
+                      <li><a href="http://kubis.ku.dk">Biblioteker</a></li>
+                      <li><a href="http://velkommen.ku.dk/besoeg/museer">Museer</a></li>
+                  </ul>
+              </div>
+              <div class="footercolumn">
+                  <h3 data-heading="toggle" class="footer-heading">Kontakt</h3>
+                  <ul class="footerlinks">
+                      <li><a href="http://findvej.ku.dk">Find vej</a></li>
+                      <li><a href="http://ku.dk/vejviser">Find en medarbejder</a></li>
+                      <li><a href="http://velkommen.ku.dk/kontakt">Kontakt KU</a></li>
+                  </ul>
+                  <h3 data-heading="toggle" class="footer-heading">Services</h3>
+                  <ul class="footerlinks">
+                      <li><a href="http://nyheder.ku.dk/presseservice">Presseservice</a></li>
+                      <li><a href="http://designguide.ku.dk">Designguide</a></li>
+                      <li><a href="http://ku-shop.dk">Merchandise</a></li>
+                      <li><a href="http://it.ku.dk/kontakt/support_KU">IT-support</a></li>
+                      <li><a href="http://oko.ku.dk">CVR, EAN og bankoplysninger</a></li>
+                  </ul>
+              </div>
+              <div class="footercolumn">
+                  <h3 data-heading="toggle" class="footer-heading">For studerende og ansatte</h3>
+                  <ul class="footerlinks">
+                      <li><a class="padlock" href="http://intranet.ku.dk">KUnet</a></li>
+                  </ul>
+                  <h3 data-heading="toggle" class="footer-heading">Job og karriere</h3>
+                  <ul class="footerlinks">
+                      <li><a href="http://jobportal.ku.dk">Jobportalen</a></li>
+                      <li><a href="http://mangfoldighed.ku.dk">Mangfoldighed</a></li>
+                      <li><a href="http://alumni.ku.dk">Alumne</a></li>
+                  </ul>
+                  <h3 data-heading="toggle" class="footer-heading">Nødsituationer</h3>
+                  <ul class="footerlinks">
+                      <li><a href="http://akut.ku.dk">KU's sikkerhedsberedskab</a></li>
+                  </ul>
+              </div>
+              <div class="footercolumn">
+                  <h3 data-heading="toggle" class="footer-heading">Web</h3>
+                  <ul class="footerlinks">
+                      <li><a href="http://velkommen.ku.dk/om-webstedet">Om websitet</a></li>
+                      <li><a href="http://velkommen.ku.dk/om-webstedet/cookie-og-privatlivspolitik">Cookies og privatlivspolitik</a></li>
+                      <li><a href="http://informationssikkerhed.ku.dk">Informationssikkerhed</a></li>
+                      <li><a href="http://velkommen.ku.dk/indeks">A-Å-indeks</a></li>
+                  </ul>
+                  <div class="social-items">
+                      <h3 data-heading="open" class="footer-heading">Mød KU på</h3>
+                      <div class="social-item">
+                          <a target="_blank" href="https://www.facebook.com/universitet" class="social-icon facebook" title="Facebook"></a>
+                      </div>
+                      <div class="social-item">
+                          <a target="_blank" href="https://www.linkedin.com/edu/k%C3%B8benhavns-universitet-12012" class="social-icon linkedin" title="LinkedIn"></a>
+                      </div>
+                      <div class="social-item">
+                          <a target="_blank" href="http://velkommen.ku.dk/apps" class="social-icon app" title="KU Apps"></a>
+                      </div>
+                      <div class="social-item">
+                          <a target="_blank" href="http://nyheder.ku.dk/rss/" class="social-icon rss" title="RSS"></a>
+                      </div>
+                      <div class="social-item">
+                          <a target="_blank" href="https://twitter.com/koebenhavns_uni" class="social-icon twitter" title="Twitter"></a>
+                      </div>
+                      <div class="social-item">
+                          <a target="_blank" href="https://www.youtube.com/user/CopenhagenUniversity" class="social-icon youtube" title="YouTube"></a>
+                      </div>
+                      <div class="social-item">
+                          <a target="_blank" href="http://www.futurity.org/university/university-of-copenhagen" class="social-icon futurity" title="futurity"></a>
+                      </div>
+                      <div class="social-item">
+                          <a target="_blank" href="http://theconversation.com/institutions/university-of-copenhagen" class="social-icon the_conversation" title="The Conversation"></a>
+                      </div>
+                      <div class="social-item">
+                          <a target="_blank" href="https://www.coursera.org/ucph" class="social-icon coursera" title="Coursera"></a>
+                      </div>
+                      <div class="social-item">
+                          <a target="_blank" href="http://video.ku.dk" class="social-icon ku_video" title="KU Videoportal"></a>
+                      </div>
+                  </div>
+              </div>
+          </div>
   </div>
 </footer>
 
