--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -21,6 +21,7 @@
 @import "tables.less";
 @import "forms.less";
 @import "buttons.less";
+@import "footer.less";
 
 // Components
 @import "component-animations.less";
