--- a/less/variables.less
+++ b/less/variables.less
@@ -14,6 +14,8 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
+@white-color:             #fff;
+
 @brand-primary:         darken(#428bca, 6.5%); // #337ab7
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
@@ -55,7 +57,7 @@
 @font-name-base:          "notosans-regular-webfont";
 //** Element ID within SVG icon file.
 @font-name-svg-id:        "noto_sans_regular";
-@font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  "noto sans regular", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
@@ -90,7 +92,6 @@
 
 //** Load fonts from this directory.
 @icon-font-path:          "../fonts/";
-
 //** File name for all font files.
 @icon-font-name:          "glyphicons-halflings-regular";
 //** Element ID within SVG icon file.
@@ -101,13 +102,13 @@
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
-@padding-base-vertical:     6px;
-@padding-base-horizontal:   12px;
+@padding-base-vertical:     15px;
+@padding-base-horizontal:   15px;
 
-@padding-large-vertical:    10px;
-@padding-large-horizontal:  16px;
+@padding-large-vertical:    20px;
+@padding-large-horizontal:  20px;
 
-@padding-small-vertical:    5px;
+@padding-small-vertical:    10px;
 @padding-small-horizontal:  10px;
 
 @padding-xs-vertical:       1px;
