--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -4,8 +4,8 @@
   <div class="container-fluid globalfooter">
       <div class="footercontent clearfix">
               <div class="footercolumn">
-                  <h3 data-heading="toggle" class="footer-heading visible-desktop">Københavns Universitet</h3>
-                  <h3 data-heading="toggle" class="footer-heading visible-mobile">Organisation</h3>
+                  <h3 data-heading="toggle" class="footer-heading hidden-xs">Københavns Universitet</h3>
+                  <h3 data-heading="toggle" class="footer-heading visible-xs-block">Organisation</h3>
                   <ul class="footerlinks">
                       <li><a href="http://velkommen.ku.dk/organisation/ledelse">Ledelse</a></li>
                       <li><a href="http://velkommen.ku.dk/organisation/administration">Administration</a></li>
