--- a/docs/assets/css/src/docs.css
+++ b/docs/assets/css/src/docs.css
@@ -53,7 +53,7 @@ h4 code {
 .btn-outline-inverse {
   color: #fff;
   background-color: transparent;
-  border-color: #cdbfe3;
+  border-color: #fff;
 }
 .btn-outline-inverse:hover,
 .btn-outline-inverse:focus,
@@ -71,8 +71,7 @@ h4 code {
   color: #fff;
   text-align: center;
   cursor: default;
-  background-color: #563d7c;
-  border-radius: 15%;
+  border-radius: 2px;
 }
 .bs-docs-booticon-sm {
   width: 30px;
@@ -81,10 +80,7 @@ h4 code {
   line-height: 28px;
 }
 .bs-docs-booticon-lg {
-  width: 144px;
-  height: 144px;
-  font-size: 108px;
-  line-height: 140px;
+  font-size: 28px;
 }
 .bs-docs-booticon-inverse {
   color: #563d7c;
@@ -92,7 +88,7 @@ h4 code {
 }
 .bs-docs-booticon-outline {
   background-color: transparent;
-  border: 1px solid #cdbfe3;
+  border: 1px solid #fff;
 }
 
 
@@ -208,16 +204,9 @@ h4 code {
 .bs-docs-header {
   position: relative;
   padding: 30px 0;
-  color: #cdbfe3;
+  color: #fff;
   text-align: center;
-  text-shadow: 0 1px 0 rgba(0,0,0,.1);
-  background-color: #6f5499;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#563d7c), to(#6f5499));
-  background-image: -webkit-linear-gradient(top, #563d7c 0%, #6f5499 100%);
-  background-image:      -o-linear-gradient(top, #563d7c 0%, #6f5499 100%);
-  background-image:         linear-gradient(to bottom, #563d7c 0%, #6f5499 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#563d7c', endColorstr='#6F5499', GradientType=0);
-  background-repeat: repeat-x;
+  background-color: #777;
 }
 
 /* Masthead (headings and download button) */
@@ -237,7 +226,7 @@ h4 code {
 .bs-docs-masthead .version {
   margin-top: -15px;
   margin-bottom: 30px;
-  color: #9783b9;
+  color: #fff;
 }
 .bs-docs-masthead .btn {
   width: 100%;
@@ -263,7 +252,7 @@ h4 code {
 @media (min-width: 992px) {
   .bs-docs-masthead .lead {
     width: 80%;
-    font-size: 30px;
+    font-size: 20px;
   }
 }
 
@@ -403,7 +392,7 @@ h4 code {
 .bs-docs-featurette {
   padding-top: 40px;
   padding-bottom: 40px;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.5;
   color: #555;
   text-align: center;
