--- a/less/footer.less
+++ b/less/footer.less
@@ -23,8 +23,16 @@
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+    }
 
-        .footercolumn:first-child:before {
+    .footercolumn {
+        width: 30%;
+        margin-right: @grid-gutter-width;
+        float: left;
+        z-index: 2;
+        position: relative;
+
+        &:first-child:before {
             content: ' ';
             display: block;
             position: absolute;
@@ -38,6 +46,72 @@
             opacity: .1;
             background: url('../../images/footersegl.svg') no-repeat;
             background-size: cover;
+        }
+
+        &:last-child {
+            margin-right: 0;
+        }
+
+        .footer-heading {
+            font-size: 14px;
+            line-height: 18px;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            font-weight: 700;
+            margin: 0;
+
+            a,
+            a:visited {
+                color: @white-color;
+            }
+
+            a:hover,
+            a:focus, a:active {
+                color: #e2e2e2;
+            }
+
+            &:not(:first-child) {
+                margin-top: 20px;
+            }
+            &[data-heading='open'] {
+                margin-bottom: 3px;
+            }
+        }
+    }
+
+    ul.footerlinks {
+        list-style: none;
+        padding-left: 0;
+        margin: 2px 0 0;
+        display: block;
+
+        li {
+            padding: 0;
+            line-height: 20px;
+            font-size: @font-size-base;
+            font-weight: normal;
+
+            a {
+                color: @white-color;
+                text-decoration: none;
+
+                &:hover {
+                    text-decoration: none;
+                    color: #e2e2e2;
+                }
+            }
+
+            .padlock:after {
+                content: " ";
+                background: url('../../images/padlock.svg') no-repeat;
+                background-size: cover;
+                top: 1px;
+                left: 5px;
+                height: 14px;
+                width: 10px;
+                display: inline-block;
+                position: relative;
+            }
         }
     }
 }
