--- a/less/footer.less
+++ b/less/footer.less
@@ -1,117 +1,335 @@
 //
 // Global footer
 // --------------------------------------------------
-
 .globalfooter {
-    position: relative;
-    background: @gray-light;
-    background: linear-gradient(to bottom, rgba(119, 119, 119, 1) 0%, rgba(134, 134, 134, 1) 25%, rgba(142, 141, 141, 1) 50%, rgba(136, 136, 136, 1) 80%, rgba(128, 128, 128, 1) 100%);
-    color: @white-color;
-    flex: none;
-    margin: 0 auto;
-    min-width:  (@container-large-desktop - @grid-gutter-width);
+  position: relative;
+  background: @gray-light;
+  background: linear-gradient(to bottom, rgba(119, 119, 119, 1) 0%, rgba(134, 134, 134, 1) 25%, rgba(142, 141, 141, 1) 50%, rgba(136, 136, 136, 1) 80%, rgba(128, 128, 128, 1) 100%);
+  color: @white-color;
+  flex: none;
+  margin: 0 auto;
+  padding: 0;
+  //min-width: (@container-large-desktop - @grid-gutter-width);
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  .footercontent {
+    max-width: (@container-large-desktop - @grid-gutter-width);
     width: 100%;
-    height: auto;
-    overflow: hidden;
-
-    .footercontent {
-        max-width: (@container-large-desktop - @grid-gutter-width);
-        width: 100%;
-        margin: 0 auto;
-        padding: @grid-gutter-width @grid-gutter-width @padding-large-vertical @grid-gutter-width;
+    margin: 0 auto;
+    padding: @grid-gutter-width @grid-gutter-width @padding-large-vertical;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .footercolumn {
+    width: 30%;
+    margin-right: @grid-gutter-width;
+    float: left;
+    z-index: 2;
+    position: relative;
+    &:first-child:before {
+      content: ' ';
+      display: block;
+      position: absolute;
+      z-index: -1;
+      top: -5px;
+      right: 55px;
+      left: auto;
+      bottom: 0;
+      width: 430px;
+      height: 430px;
+      opacity: 0.1;
+      background: url('../../images/footersegl.svg') no-repeat;
+      background-size: cover;
+    }
+    &:last-child {
+      margin-right: 0;
+    }
+    .footer-heading {
+      font-size: 14px;
+      line-height: 18px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      font-weight: 700;
+      margin: 0;
+      a,
+      a:visited {
+        color: @white-color;
+      }
+      a:active,
+      a:focus,
+      a:hover {
+        color: #e2e2e2;
+      }
+      &:not(:first-child) {
+        margin-top: 20px;
+      }
+      &[data-heading='open'] {
+        margin-bottom: 3px;
+      }
+    }
+  }
+  ul.footerlinks {
+    list-style: none;
+    padding-left: 0;
+    margin: 2px 0 0;
+    display: block;
+    li {
+      padding: 0;
+      line-height: 20px;
+      font-size: @font-size-base;
+      font-weight: normal;
+      a {
+        color: @white-color;
+        text-decoration: none;
+        &:hover {
+          text-decoration: none;
+          color: #e2e2e2;
+        }
+      }
+      .padlock:after {
+        content: " ";
+        background: url('../../images/padlock.svg') no-repeat;
+        background-size: cover;
+        top: 1px;
+        left: 5px;
+        height: 14px;
+        width: 10px;
+        display: inline-block;
         position: relative;
+      }
+    }
+  }
+  .social-items {
+    width: 80%;
+    .social-item {
+      display: inline-block;
+      margin: 0.5em 0.3em 0 0;
+      .social-icon {
+        width: 28px;
+        height: 28px;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-color: #757575;
+        border-radius: 100%;
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+        align-items: center;
+        justify-content: center;
+        &.facebook {
+          background-image: url('../../images/social_icon_facebook.svg');
+          &:hover {
+            background-color: #3e5a98;
+          }
+        }
+        &.instagram {
+          background-image: url('../../images/social_icon_instagram.svg');
+          &:hover {
+            background-color: #3e5a98;
+          }
+        }
+        &.twitter {
+          background-image: url('../../images/social_icon_twitter.svg');
+          &:hover {
+            background-color: #2ca8df;
+          }
+        }
+        &.app {
+          background-image: url('../../images/social_icon_app.svg');
+          &:hover {
+            background-color: #901a1e;
+          }
+        }
+        &.coursera {
+          background-image: url('../../images/social_icon_coursera.svg');
+          &:hover {
+            background-color: #408bc9;
+          }
+        }
+        &.futurity {
+          background-image: url('../../images/social_icon_futurity.svg');
+          &:hover {
+            background-color: #f7ba20;
+          }
+        }
+        &.ku_video {
+          background-image: url('../../images/social_icon_ku_video.svg');
+          &:hover {
+            background-color: #439639;
+          }
+        }
+        &.linkedin {
+          background-image: url('../../images/social_icon_linkedin.svg');
+          &:hover {
+            background-color: #0078b6;
+          }
+        }
+        &.rss {
+          background-image: url('../../images/social_icon_rss.svg');
+          &:hover {
+            background-color: #f7941e;
+          }
+        }
+        &.the_conversation {
+          background-image: url('../../images/social_icon_the_conversation.svg');
+          &:hover {
+            background-color: #d7352a;
+          }
+        }
+        &.vimeo {
+          background-image: url('../../images/social_icon_vimeo.svg');
+          &:hover {
+            background-color: #d12223;
+          }
+        }
+        &.youtube {
+          background-image: url('../../images/social_icon_youtube.svg');
+          &:hover {
+            background-color: #d12223;
+          }
+        }
+      }
     }
-
-    .footercolumn {
-        width: 30%;
-        margin-right: @grid-gutter-width;
-        float: left;
-        z-index: 2;
-        position: relative;
-
+    .footer-heading {
+      margin-top: 20px;
+    }
+  }
+}
+@media (min-width: @screen-sm-min) and (max-width: @screen-md-min) {
+  .globalfooter {
+    .footercontent {
+      padding: @grid-gutter-width @padding-large-vertical @padding-large-vertical
+    }
+    .social-items {
+      width: 100%;
+    }
+  }
+}
+@media (max-width: @screen-sm-min) {
+  .globalfooter {
+    //min-width: 200px;
+    background: @gray-light;
+    .footercontent {
+      width: 100%;
+      display: block;
+      padding: 0;
+      &:after {
+        content: none;
+      }
+      .footercolumn {
+        width: 100%;
+        float: none;
+        padding: 0;
         &:first-child:before {
-            content: ' ';
-            display: block;
-            position: absolute;
-            z-index: -1;
-            top: -5px;
-            right: 55px;
-            left: auto;
-            bottom: 0;
-            width: 430px;
-            height: 430px;
-            opacity: .1;
-            background: url('../../images/footersegl.svg') no-repeat;
-            background-size: cover;
+          display: none;
         }
-
-        &:last-child {
-            margin-right: 0;
-        }
-
         .footer-heading {
-            font-size: 14px;
-            line-height: 18px;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            font-weight: 700;
-            margin: 0;
-
-            a,
-            a:visited {
-                color: @white-color;
+          font-weight: 700;
+          font-size: @font-size-large;
+          cursor: pointer;
+          position: relative;
+          padding: 12px 25px 12px 20px;
+          margin-top: 0 !important;
+          &[data-heading='open'] {
+            cursor: default;
+            padding-left: 0;
+            padding-bottom: 8px;
+            margin-bottom: 0;
+            &:after,
+            &:before {
+              display: none;
             }
-
-            a:hover,
-            a:focus, a:active {
-                color: #e2e2e2;
+          }
+          &[data-heading='toggle'] {
+            + ul.footerlinks {
+              display: none;
+              margin: 0;
+              background-color: @white-color;
+              backface-visibility: hidden;
+              -webkit-perspective: 1000;
+              transform: translate3d(0, 0, 0);
             }
-
-            &:not(:first-child) {
-                margin-top: 20px;
-            }
-            &[data-heading='open'] {
-                margin-bottom: 3px;
-            }
-        }
-    }
-
-    ul.footerlinks {
-        list-style: none;
-        padding-left: 0;
-        margin: 2px 0 0;
-        display: block;
-
-        li {
-            padding: 0;
-            line-height: 20px;
-            font-size: @font-size-base;
+          }
+          &:before {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            display: block;
+            content: ' ';
+            background: @white-color;
+            height: 1px;
+            width: calc(100% + 10px);
+            margin-left: -10px;
+          }
+          &:after {
+            font-family: @custom-icon-font-name;
+            font-style: normal;
             font-weight: normal;
-
-            a {
-                color: @white-color;
-                text-decoration: none;
-
-                &:hover {
-                    text-decoration: none;
-                    color: #e2e2e2;
-                }
+            line-height: 1;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            content: '\0043';
+            z-index: 2;
+            color: @white-color;
+            font-size: 13px;
+            position: absolute;
+            top: 37%;
+            right: 15px;
+            left: auto;
+            transform: rotate(0deg) translate3d(0, 0, 0);
+            transition: transform 0.4s ease-in-out;
+          }
+          &.open {
+            &:after {
+              transform: rotate(90deg) translate3d(0, 0, 0);
+              transition: transform 0.4s ease-in-out;
             }
-
-            .padlock:after {
-                content: " ";
-                background: url('../../images/padlock.svg') no-repeat;
-                background-size: cover;
-                top: 1px;
-                left: 5px;
-                height: 14px;
-                width: 10px;
-                display: inline-block;
-                position: relative;
-            }
+          }
         }
+        ul.footerlinks li {
+          color: #4a4949;
+          font-weight: 400;
+          font-size: @font-size-large;
+          padding: 0;
+          position: relative;
+          a {
+            color: #606060;
+            padding: @padding-small-vertical @padding-large-horizontal;
+            display: block;
+            border-bottom: 1px solid @gray;
+            &:active,
+            &:focus {
+              background-color: #cdcdcd;
+            }
+            &:hover {
+              color: initial;
+            }
+            .padlock {
+              &:after {
+                display: none;
+              }
+            }
+          }
+          &:last-child {
+            a {
+              border-bottom: 0;
+            }
+          }
+        }
+      }
     }
+    .social-items {
+      padding: 0 @padding-large-vertical @padding-large-vertical;
+      width: 100%;
+      .social-item {
+        margin: 7px 16px 0 0;
+        .social-icon {
+          width: 35px;
+          height: 35px;
+          background-color: #666;
+        }
+      }
+    }
+  }
 }
