--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -9,6 +9,17 @@
 
 // Import the fonts
 @font-face {
+  font-family: 'arrow';
+  src: url('@{icon-font-path}@{custom-icon-font-name}.eot');
+  src: url('@{icon-font-path}@{custom-icon-font-name}.eot?#iefix') format('embedded-opentype'),
+       url('@{icon-font-path}@{custom-icon-font-name}.woff2') format('woff2'),
+       url('@{icon-font-path}@{custom-icon-font-name}.woff') format('woff'),
+       url('@{icon-font-path}@{custom-icon-font-name}.ttf') format('truetype'),
+       url('@{icon-font-path}@{custom-icon-font-name}.svg#@{custom-icon-font-svg-id}') format('svg');
+}
+
+// Import the fonts
+@font-face {
   font-family: 'Glyphicons Halflings';
   src: url('@{icon-font-path}@{icon-font-name}.eot');
   src: url('@{icon-font-path}@{icon-font-name}.eot?#iefix') format('embedded-opentype'),
