--- a/docs/_includes/getting-started/examples.html
+++ b/docs/_includes/getting-started/examples.html
@@ -8,18 +8,11 @@
   <h2 id="examples-framework">Using the framework</h2>
   <div class="row bs-examples">
     <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="../examples/starter-template/">
-        <img src="../examples/screenshots/starter-template.jpg" alt="Starter template example">
+      <a class="thumbnail" href="../examples/ku-theme/">
+        <img src="../examples/screenshots/grid.jpg" alt="Multiple grids example">
       </a>
-      <h3>Starter template</h3>
-      <p>Nothing but the basics: compiled CSS and JavaScript along with a container.</p>
-    </div>
-    <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="../examples/theme/">
-        <img src="../examples/screenshots/theme.jpg" alt="Bootstrap theme example">
-      </a>
-      <h3>Bootstrap theme</h3>
-      <p>Load the optional Bootstrap theme for a visually enhanced experience.</p>
+      <h3>KU standard template</h3>
+      <p>Template with left menu.</p>
     </div>
     <div class="clearfix visible-xs"></div>
 
@@ -29,13 +22,6 @@
       </a>
       <h3>Grids</h3>
       <p>Multiple examples of grid layouts with all four tiers, nesting, and more.</p>
-    </div>
-    <div class="col-xs-6 col-md-4">
-      <a class="thumbnail" href="../examples/jumbotron/">
-        <img src="../examples/screenshots/jumbotron.jpg" alt="Jumbotron example">
-      </a>
-      <h3>Jumbotron</h3>
-      <p>Build around the jumbotron with a navbar and some basic grid columns.</p>
     </div>
     <div class="clearfix visible-xs"></div>
 
