--- a/less/mixins/grid.less
+++ b/less/mixins/grid.less
@@ -6,8 +6,10 @@
 .container-fixed(@gutter: @grid-gutter-width) {
   margin-right: auto;
   margin-left: auto;
-  padding-left:  floor((@gutter / 2));
-  padding-right: ceil((@gutter / 2));
+  padding-left: @grid-gutter-width;
+  padding-right: @grid-gutter-width;
+  // padding-left:  floor((@gutter / 2));
+  // padding-right: ceil((@gutter / 2));
   &:extend(.clearfix all);
 }
 
