--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -22,6 +22,7 @@
 html {
   font-size: 10px;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  height: 100%;
 }
 
 body {
@@ -30,6 +31,14 @@ body {
   line-height: @line-height-base;
   color: @text-color;
   background-color: @body-bg;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+header,nav,
+footer {
+  flex: none;
 }
 
 // Reset fonts for relevant elements
