--- a/less/variables.less
+++ b/less/variables.less
@@ -33,9 +33,9 @@
 @text-color:            @gray-dark;
 
 //** Global textual link color.
-@link-color:            @brand-primary;
+@link-color:            #165aad;
 //** Link hover color set via `darken()` function.
-@link-hover-color:      darken(@link-color, 15%);
+@link-hover-color:      #3d239c;
 //** Link hover decoration.
 @link-hover-decoration: underline;
 
@@ -106,8 +106,8 @@
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
-@padding-base-vertical:     15px;
-@padding-base-horizontal:   15px;
+@padding-base-vertical:     6px;
+@padding-base-horizontal:   12px;
 
 @padding-large-vertical:    20px;
 @padding-large-horizontal:  20px;
@@ -376,19 +376,20 @@
 //##
 
 // Basics of a navbar
-@navbar-height:                    50px;
+@topbar-height:                    25px;
+@navbar-height:                    40px;
 @navbar-margin-bottom:             @line-height-computed;
 @navbar-border-radius:             @border-radius-base;
 @navbar-padding-horizontal:        floor((@grid-gutter-width / 2));
 @navbar-padding-vertical:          ((@navbar-height - @line-height-computed) / 2);
 @navbar-collapse-max-height:       340px;
 
-@navbar-default-color:             #777;
-@navbar-default-bg:                #f8f8f8;
-@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-color:             #252525;
+@navbar-default-bg:                #fff;
+@navbar-default-border:            @gray;
 
 // Navbar links
-@navbar-default-link-color:                #777;
+@navbar-default-link-color:                #252525;
 @navbar-default-link-hover-color:          #333;
 @navbar-default-link-hover-bg:             transparent;
 @navbar-default-link-active-color:         #555;
